Fix jpackage: Explicitly add required JDK modules to bypass automatic resolution failure